Bug 407306 - Python bindings don't build
Summary: Python bindings don't build
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcoreaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-07 16:05 UTC by Antonio Rojas
Modified: 2021-08-23 12:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2019-05-07 16:05:46 UTC
SUMMARY
Python bindings build is broken in 5.58

sip: KProcessList::KProcessInfoList is undefined
make[2]: *** [src/lib/CMakeFiles/sip_generated_KCoreAddons_files.dir/build.make:65: src/lib/pybuild/PyKF5/KCoreAddons/unifiedKCoreAddons.cpp] Error 1
make[1]: *** [CMakeFiles/Makefile2:4063: src/lib/CMakeFiles/sip_generated_KCoreAddons_files.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
Comment 1 David Faure 2019-05-07 21:24:32 UTC
Does it work better if
using KProcessInfoList = QList<KProcessInfo>;
is changed into
typedef QList<KProcessInfo> KProcessInfoList;
in src/lib/util/kprocesslist.h:78?

Just in case sip isn't very good with C++11...

I didn't look into why my build doesn't include python bindings (nor the CI build...) -- we need to fix that too.
Comment 2 Antonio Rojas 2019-05-07 21:45:27 UTC
(In reply to David Faure from comment #1)
> Does it work better if
> using KProcessInfoList = QList<KProcessInfo>;
> is changed into
> typedef QList<KProcessInfo> KProcessInfoList;
> in src/lib/util/kprocesslist.h:78?
> 

Yes, this fixes it
Comment 3 David Edmundson 2019-05-21 21:32:28 UTC
Git commit 6a686c28d3866dea7dd28d7d6f8cf54af62cd304 by David Edmundson.
Committed on 21/05/2019 at 21:32.
Pushed by davidedmundson into branch 'master'.

Fix compliation for python bindings

Patch effectively written by David Faure on the bug report

M  +1    -1    src/lib/util/kprocesslist.h

https://commits.kde.org/kcoreaddons/6a686c28d3866dea7dd28d7d6f8cf54af62cd304